2013-02-01  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: Bugfix (Instrument and Sample name entries' size).

2013-01-28  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c, app/gui-settings.c, app/gui-subs.[ch], app/playlist.c:
	Tooltips are hung using proper Gtk+ interface;
	* app/drivers/alsa1x-output.c: audio delay estimation is reverted back
	with appropriate tooltip. The configuting warning about ALSA 0.9 is
	removed since the playback driver is working.

2013-01-27  Yury Aliaev  <mutab0r@rambler.ru>
	Manual page is added (taken probably from Debian project).

2013-01-24  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.[ch], app/xm-player.c, app/track-editor.c, app/menubar.c,
	app/xm.h: Asterisk before file name is drawn when the module has unsaved
	changes;
	* app/gui.c, app/cheat-sheet.c, app/sample-editor.c: Application icon
	support is added;
	* app/scope-group.c: Clicking at scopes is fixed (now is working properly).

2013-01-24  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.[ch]: zooming (Ctrl) and horizontal scrolling (Shift) by
	mouse wheel; sustain and loop lines are now dislayed.

2013-01-22  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.c, app/gui.c, app/gui-subs.[ch] envelope-box.xml:
	right-click on the envelope point makes it current. Right click on the
	envelope editor canvas (outside points) pops up the menu (currently with
	zoom functions only).

2013-01-21  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c, app/instrument-editor.c, app/main.c, app/xm.[ch]: the return
	value of fwrite() is handled, file errors while saving are now reported.

2013-01-18  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.[ch]: Goo canvas are used instead of Gnome canvas. The
	last dependency on Gnome is dropped! Current point is highlit. Code is
	cleaned up and bugfixed;
	* app/instrument-editor.c: the bug with sliders displaying is fixed;
	* app/gui-subs.[ch], app/playlist.c, app/sample-editor.c: Gtk+-2 native